src/objects/General_Ledger__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avidia_Cost_Center__c</fullName>
        <label>Avidia Cost Center</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avidia_GL_Account__c</fullName>
        <label>Avidia GL Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDA__c</fullName>
        <label>DDA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOER_Solar_Loan__c</fullName>
        <formula>Opportunity__r.DOER_Solar_Loan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOER Solar Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Transaction__c</fullName>
        <label>Date of Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Payment</label>
        <referenceTo>Loan_Payment__c</referenceTo>
        <relationshipLabel>General Ledger</relationshipLabel>
        <relationshipName>General_Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>General Ledger</relationshipLabel>
        <relationshipName>General_Ledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>General Ledger</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Avidia_Activity_Posting</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Transaction__c</columns>
        <columns>Amount__c</columns>
        <columns>DDA__c</columns>
        <columns>Code__c</columns>
        <columns>Avidia_GL_Account__c</columns>
        <columns>Avidia_Cost_Center__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Avidia_Cost_Center__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Avidia Activity Posting</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Avidia_Lending</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>General Ledger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Ledger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>